# rust-search-engine-example

./: .gitignore  Cargo.toml  README.md
res/: example.json  index.html
src/: main.rs
