[package]
name = "search-server"
version = "0.1.0"
authors = ["Stephen Molyneaux <WimbledonLabs@github.com>"]

[dependencies]
tantivy = "0.6.1"
rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = "0.3.15"
serde_derive = "*"
serde_json = "*"
serde = "*"
bzip2 = "0.3.3"
lazy_static = "1.1.0"
ureq = { version = "*", features = ["json", "charset"] }
